# pysonycrsdk

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.docker/: Dockerfile  compose.yaml  docker-bake.hcl
.github/workflows/: pip.yml
Sony_Camera_Remote/include/CRSDK/: CameraRemote_SDK.h  CrCommandData.h  CrControlCode.h  CrDefines.h  CrDeviceProperty.h  CrError.h  CrImageDataBlock.h  CrOperationCode.h  CrTypes.h  ICrCameraObjectInfo.h  IDeviceCallback.h
src/: camera.hpp  camera_info.cpp  camera_info.hpp  sdk_singleton.hpp  sonycrsdk_ext.cpp
src/sonycrsdk/: __init__.py
test/: test_basic.py  test_enumerate.py
